# automatic-proxy

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml  new_source_request.yaml
.github/workflows/: 01_main_orchestrator.yml  02_security_audit.yml  03_health_monitor.yml  04_auto_release.yml  05_cleanup_cache.yml  06_ci.yml
config/: country_mapping.json  proxy_sources_registry.yaml  settings.yaml  validation_rules.yaml
docker/: Dockerfile  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  RUNBOOK.md  SOURCES_CATALOG.md
outputs/: keep_alive_proxies.txt  proxies.txt
outputs/by_anonymity/: anonymous.txt  elite.txt
outputs/by_country/: ID_proxies.txt  XX_proxies.txt
outputs/by_country/GB_proxies/: socks5.txt
outputs/by_country/HK_proxies/: HK_all.txt
outputs/by_country/UNKNOWN_proxies/: UNKNOWN_all.txt  http.txt  keep_alive.txt  socks4.txt  socks5.txt  software_haproxy.txt  software_litespeed.txt  software_mikrotik.txt  software_squid.txt  software_tinyproxy.txt
outputs/by_protocol/: http.txt  socks4.txt  socks5.txt
outputs/metadata/: manifest.json  source_health_report.json
scripts/: add_new_source.py  fetch_judge_servers.py  local_benchmark.py  update_geoip_db.py
src/: __init__.py  main.py
src/collectors/: base_scraper.py  factory.py
src/collectors/extractors/: github_raw_scraper.py  html_table_scraper.py  json_api_scraper.py  regex_text_scraper.py
src/collectors/rotators/: proxy_rotator.py  user_agent_rotator.py
src/core/: constants.py  exceptions.py  pipeline_manager.py
src/deduplication/: bloom_filter.py  early_aggregator.py  redis_state_manager.py
src/enrichment/: asn_resolver.py  geo_cache.py  scoring_engine.py  spam_blacklist_check.py
src/exporters/: atomic_writer.py  json_manifest_builder.py  master_file_builder.py  segmented_builder.py
src/models/: proxy.py  source_metadata.py  validation_stats.py
src/utils/: async_semaphore_pool.py  config_loader.py  http_client.py  rate_limiter.py  structured_logger.py
src/validators/: 01_liveliness_tcp.py  02_protocol_detector.py  03_anonymity_check.py  04_latency_tester.py  05_geo_locator.py  __init__.py  engine.py  judge_servers.py
tests/integration/: test_full_pipeline.py
tests/snapshots/: README.md
tests/unit/: test_anonymity_filter.py  test_exporters_segmented.py  test_extractors.py  test_html_scraper.py  test_improvements.py  test_validators.py
