[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-god-tier-proxy-collector"
version = "1.0.0"
description = "High-concurrency automated proxy collector for GitHub Actions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiohttp",
    "pydantic",
    "pydantic-settings",
    "PyYAML",
    "geoip2",
    "rich",
    "tenacity",
    "uvloop; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[project.scripts]
proxy-collector = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = [
    "E501",
    "I001",
    "UP017",
    "UP037",
    "UP041",
    "UP042",
    "UP045",
    "N818",
    "N999",
    "SIM105",
    "SIM117",
    "B017",
    "ASYNC109",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
disable_error_code = ["type-arg", "no-untyped-def", "unused-ignore", "assignment", "misc", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks integration tests",
]
