[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-god-tier-proxy-collector"
version = "1.0.0"
description = "High-concurrency automated proxy collector for GitHub Actions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "geoip2>=4.8",
    "rich>=13.7",
    "tenacity>=8.3",
]

[project.scripts]
proxy-collector = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = [
    "E501",
    "UP042",
    "N818",
    "SIM105",
    "N999",
    "ASYNC109",
    "B017",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
